--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ packages = [{include = "nlp_apibot"}]
 python = "^3.10"
 requests = "^2.31.0"
 nltk = "^3.8.1"
-"googlesearch.py" = "^1.6.1"
 lxml = "^5.2.1"
 beautifulsoup4 = "^4.12.3"
 scikit-learn = "^1.4.2"
+googlesearch-python = "^1.2.4"
 
 
 [build-system]
